Fixing overlapping footer.
When screen height below 550px.

--- a/css/pass.less
+++ b/css/pass.less
@@ -68,6 +68,11 @@
   color: #000;
   opacity: 0.54;
   font-size: 14px;
+
+  @media (max-height: 550px) {
+    position: relative;
+    padding: 1em;
+  }
 }
 
 #login-form {
